kube/apps/restic/manifests/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restic
  namespace: restic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restic
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: restic
    spec:
      containers:
        - name: restic
          image: restic/rest-server:0.11.0
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: restic-data
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - mallard
      restartPolicy: Always
