kube/apps/restic/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: restic
  namespace: restic
  labels:
    app: restic
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http
  selector:
    app: restic
