kube/apps/restic/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restic
  namespace: restic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: ${domain:=paddlepond.local}
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: restic.${domain:=paddlepond.local}
      http:
        paths:
          - backend:
              service:
                name: restic
                port:
                  number: 8000
            pathType: ImplementationSpecific
  tls:
  - hosts:
    - restic.${domain:=paddlepond.local}
    secretName: restic-tls
